Some local changes

--- a/src/GamaEdtech.Back.Gateway.Rest/appsettings.json
+++ b/src/GamaEdtech.Back.Gateway.Rest/appsettings.json
@@ -1,12 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Default": "Server=localhost;Database=GamaEdtech;Trusted_Connection=True;TrustServerCertificate=True"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=GamaEdtech;user = sa; pwd = 195Naderi@#$",
+    "AZURE_SQL_CONNECTIONSTRING": "Server=localhost;Database=GamaEdtech;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
