--- a/src/Application/Interface/GamaEdtech.Application.Interface.csproj
+++ b/src/Application/Interface/GamaEdtech.Application.Interface.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdGen" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" />
   </ItemGroup>
 
