--- a/src/Core/Common/GamaEdtech.Common.csproj
+++ b/src/Core/Common/GamaEdtech.Common.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Destructurama.Attributed" />
     <PackageReference Include="DynamicExpresso.Core" />
+    <PackageReference Include="IdGen" />
     <PackageReference Include="Mapster" />
     <PackageReference Include="Mapster.Async" />
     <PackageReference Include="Mapster.DependencyInjection" />
