--- a/src/Domain/GamaEdtech.Domain.csproj
+++ b/src/Domain/GamaEdtech.Domain.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="IdGen" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
     <PackageReference Include="Mapster" />
     <PackageReference Include="NetTopologySuite" />
