--- a/src/Infrastructure/Interface/GamaEdtech.Infrastructure.Interface.csproj
+++ b/src/Infrastructure/Interface/GamaEdtech.Infrastructure.Interface.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdGen" />
     <PackageReference Include="NetTopologySuite" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" />
   </ItemGroup>
