--- a/src/Presentation/Api/GamaEdtech.Presentation.Api.csproj
+++ b/src/Presentation/Api/GamaEdtech.Presentation.Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="BouncyCastle.Cryptography" />
     <PackageReference Include="Hangfire.AspNetCore" />
     <PackageReference Include="Hangfire.SqlServer" />
+    <PackageReference Include="IdGen" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" />
     <PackageReference Include="NetTopologySuite" />
