--- a/src/Presentation/ViewModel/GamaEdtech.Presentation.ViewModel.csproj
+++ b/src/Presentation/ViewModel/GamaEdtech.Presentation.ViewModel.csproj
@@ -1,6 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="IdGen" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" />
   </ItemGroup>
 
