add: GetCoins to Game controller

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -899,7 +899,7 @@ dotnet_diagnostic.CA2362.severity = error
 dotnet_diagnostic.IDE0001.severity = error
 dotnet_diagnostic.IDE0004.severity = error
 dotnet_diagnostic.IDE0005.severity = error
-dotnet_diagnostic.IDE0007.severity = error
+dotnet_diagnostic.IDE0007.severity = none
 dotnet_diagnostic.IDE0009.severity = none
 dotnet_diagnostic.IDE0010.severity = suggestion
 dotnet_diagnostic.IDE0011.severity = error
@@ -912,7 +912,7 @@ dotnet_diagnostic.IDE0021.severity = error
 dotnet_diagnostic.IDE0023.severity = error
 dotnet_diagnostic.IDE0024.severity = error
 dotnet_diagnostic.IDE0026.severity = error
-dotnet_diagnostic.IDE0028.severity = error
+dotnet_diagnostic.IDE0028.severity = none
 dotnet_diagnostic.IDE0029.severity = error
 dotnet_diagnostic.IDE0030.severity = error
 dotnet_diagnostic.IDE0031.severity = error
