edit: container type

--- a/src/Presentation/Api/appsettings.json
+++ b/src/Presentation/Api/appsettings.json
@@ -17,10 +17,14 @@
       "ConnectionString": "",
       "ContainerName": "contentservice",
       "SchoolContainerName": "school",
-      "PostContainerName": "post"
+      "PostContainerName": "post",
+      "UserContainerName": "user"
     },
     "Local": {
-      "Path": "Files"
+      "Path": "Files",
+      "SchoolContainerName": "school",
+      "PostContainerName": "post",
+      "UserContainerName": "user"
     }
   },
   "Captcha": {
