--- a/src/Presentation/Api/GamaEdtech.Presentation.Api.csproj
+++ b/src/Presentation/Api/GamaEdtech.Presentation.Api.csproj
@@ -8,8 +8,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="select.pdf.content\Select.Html.dep">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="select.pdf.content\Select.Tools.dep">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" />
     <PackageReference Include="BouncyCastle.Cryptography" />
+    <PackageReference Include="Freeware.Html2Pdf" />
+    <PackageReference Include="FreeSpire.Office" />
     <PackageReference Include="Hangfire.AspNetCore" />
     <PackageReference Include="Hangfire.SqlServer" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
@@ -26,10 +37,6 @@
       <Private>false</Private>
     </ProjectReference>
     <ProjectReference Include="..\ViewModel\GamaEdtech.Presentation.ViewModel.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
