--- a/src/Application/Service/GamaEdtech.Application.Service.csproj
+++ b/src/Application/Service/GamaEdtech.Application.Service.csproj
@@ -13,7 +13,8 @@
   <ItemGroup>
     <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" />
     <PackageReference Include="Azure.Storage.Blobs" />
-    <PackageReference Include="FreeSpire.Office" />
+    <PackageReference Include="FreeSpire.Doc" />
+    <PackageReference Include="FreeSpire.Presentation" />
     <PackageReference Include="Freeware.Html2Pdf" />
     <PackageReference Include="Freeware.Pdf2Png" />
     <PackageReference Include="Handlebars.Net.Helpers.Humanizer" />
