--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,9 +7,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <PackageVersion Include="BouncyCastle.Cryptography" Version="2.6.2" />
-    <PackageVersion Include="FreeSpire.Doc" Version="12.2.0" />
-    <PackageVersion Include="FreeSpire.Presentation" Version="9.3.0" />
-    <PackageVersion Include="Freeware.Html2Pdf" Version="1.1.0" />
     <PackageVersion Include="Handlebars.Net.Helpers.Humanizer" Version="2.5.3" />
     <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.22" />
     <PackageVersion Include="Hangfire.SqlServer" Version="1.8.22" />
@@ -23,6 +20,7 @@
     <PackageVersion Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.119.1" />
     <PackageVersion Include="SkiaSharp.QrCode" Version="0.9.0" />
     <PackageVersion Include="Slugify.Core" Version="5.1.1" />
+    <PackageVersion Include="Spire.Officefor.NETStandard" Version="10.10.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.556" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.15.0.120848">
       <PrivateAssets>all</PrivateAssets>
