Add Email Marketing Feature (Free Service + New Endpoint) #320

--- a/src/Presentation/Api/appsettings.json
+++ b/src/Presentation/Api/appsettings.json
@@ -23,6 +23,13 @@
       "Path": "Files"
     }
   },
+  "EmailProvider": {
+    "Type": "Resend",
+    "From": "noreply@gamaedtech.com",
+    "Resend": {
+      "ApiToken": "re_CMASn1iR_7tR7ctybTJBfF3x9MvvteMRJ"
+    }
+  },
   "Captcha": {
     "Type": "Google",
     "Google": {
