--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -17,6 +17,7 @@
     <PackageVersion Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.14.0" />
     <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.14.15" />
     <PackageVersion Include="NetTopologySuite" Version="2.6.0" />
+    <PackageVersion Include="Resend" Version="0.2.1" />
     <PackageVersion Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.119.1" />
     <PackageVersion Include="SkiaSharp.QrCode" Version="0.9.0" />
     <PackageVersion Include="Slugify.Core" Version="5.1.1" />
