--- a/src/Infrastructure/Infrastructure/GamaEdtech.Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure/GamaEdtech.Infrastructure.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" />
     <PackageReference Include="Microsoft.Extensions.Http" />
     <PackageReference Include="NetTopologySuite" />
+    <PackageReference Include="Resend" />
     <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" />
     <PackageReference Include="SkiaSharp.QrCode" />
     <PackageReference Include="System.Configuration.ConfigurationManager" />
