Enhance /admin/emailmarketings Endpoint — Configurable Sender Email #326

--- a/src/Presentation/Api/appsettings.json
+++ b/src/Presentation/Api/appsettings.json
@@ -25,7 +25,9 @@
   },
   "EmailProvider": {
     "Type": "Resend",
-    "From": "noreply@gamaedtech.com",
+    "Info": "info@gamaedtech.com",
+    "Marketing": "marketing@gamaedtech.com",
+    "Support": "support@gamaedtech.com",
     "Resend": {
       "ApiToken": "re_CMASn1iR_7tR7ctybTJBfF3x9MvvteMRJ"
     }
