feat(board): show id and icons in board list

--- a/src/Presentation/Api/appsettings.Development.json
+++ b/src/Presentation/Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Connection": {
-    "ConnectionString": "Server=.;Database=GamaEdtech;Trusted_Connection=True;TrustServerCertificate=True",
+    "ConnectionString": "Server=tcp:localhost,1433;Initial Catalog=GamaEdtech;Persist Security Info=False;User ID=sa;Password=195Naderi@#$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
     "SensitiveDataLoggingEnabled": true,
     "DetailedErrorsEnabled": true
   },
