--- a/src/Presentation/Api/appsettings.json
+++ b/src/Presentation/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Connection": {
-    "ConnectionString": "Server=.;Database=GamaEdtech;Trusted_Connection=True;TrustServerCertificate=True",
+    "ConnectionString": "Server=tcp:localhost,1433;Initial Catalog=GamaEdtech;Persist Security Info=False;User ID=sa;Password=195Naderi@#$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
     "DefaultSchema": "",
     "SensitiveDataLoggingEnabled": false,
     "DetailedErrorsEnabled": true,
@@ -43,7 +43,13 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Async", "Serilog.Sinks.File", "Serilog.Settings.Configuration", "Serilog.Expressions", "Serilog.Enrichers.ClientInfo" ],
+    "Using": [
+      "Serilog.Sinks.Async",
+      "Serilog.Sinks.File",
+      "Serilog.Settings.Configuration",
+      "Serilog.Expressions",
+      "Serilog.Enrichers.ClientInfo"
+    ],
     "LevelSwitches": { "$controlSwitch": "Verbose" },
     "MinimumLevel": {
       "Default": "Warning",
