--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,6 +7,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <PackageVersion Include="BouncyCastle.Cryptography" Version="2.6.2" />
+    <PackageVersion Include="Google.Apis.YouTube.v3" Version="1.73.0.3981" />
     <PackageVersion Include="Handlebars.Net.Helpers.Humanizer" Version="2.5.3" />
     <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.22" />
     <PackageVersion Include="Hangfire.SqlServer" Version="1.8.22" />
