--- a/src/Presentation/Api/appsettings.json
+++ b/src/Presentation/Api/appsettings.json
@@ -26,7 +26,9 @@
   "EmailProvider": {
     "Type": "Resend",
     "Resend": {
-      "ApiToken": "re_CMASn1iR_7tR7ctybTJBfF3x9MvvteMRJ"
+      "ApiToken": "re_CMASn1iR_7tR7ctybTJBfF3x9MvvteMRJ",
+      "Email": "support@gamatrain.com",
+      "Secret": "******"
     }
   },
   "Captcha": {
