--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs
+/src/Presentation/Api/appsettings.Development.json
