Support inbound emails as Contact Us messages #340

--- a/src/Presentation/Api/appsettings.json
+++ b/src/Presentation/Api/appsettings.json
@@ -25,9 +25,15 @@
   },
   "EmailProvider": {
     "Type": "Resend",
+    "Emails": [
+      "Admin dep <admin@gamatrain.com>",
+      "Sales dep <sales@gamatrain.com>",
+      "Support dep <support@gamatrain.com>",
+      "Ads dep <ads@gamatrain.com>"
+    ],
+    "SupportEmail": "Gamatrain Support <support@gamatrain.com>",
     "Resend": {
       "ApiToken": "re_CMASn1iR_7tR7ctybTJBfF3x9MvvteMRJ",
-      "Email": "support@gamatrain.com",
       "Secret": "******"
     }
   },
